@@ -39,6 +39,7 @@ version <next>:
 - frei0r wrapper filter
 - change crop filter syntax to width:height:x:y
 - make the crop filter accept parametric expressions
+- make ffprobe accept AVFormatContext options
 
 
 version 0.6:
